--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# user ignore
+.sns-optim*
+ppo-behavior-cloning/runs/*
+ppo-behavior-cloning/models/*
+ppo-behavior-cloning/videos/*
+ppo-behavior-cloning/wandb/*
+.gitignore
+video/*
+*.pth
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
