--- a/ppo-behavior-cloning/sweep.yaml
+++ b/ppo-behavior-cloning/sweep.yaml
@@ -16,16 +16,12 @@ parameters:
   capture_video:
     values: [True]
   num_envs:
-    values: [1, 2, 4]
+    values: [4]
   num_steps:
     values: [2048, 4096, 8192]
   gamma:
-    values: [0.95, 0.99, 0.995]
+    min: 0.9
+    max: 1.0
   gae_lambda:
-    values: [0.9, 0.95, 0.99]
-  update_epochs:
-    values: [5, 10, 20]
-  clip_coef:
-    values: [0.1, 0.2, 0.3]
-  ent_coef:
-    values: [0.01, 0.05, 0.1]
+    min: 0.9
+    max: 1.0
